# dodbogi

./: .gitignore  AGENTS.md  Cargo.toml
crates/dodbogi-app/: Cargo.toml  app.manifest  build.rs
crates/dodbogi-app/src/: main.rs  settings_ui.rs
crates/dodbogi-capture/: Cargo.toml
crates/dodbogi-capture/src/: lib.rs
crates/dodbogi-core/: Cargo.toml
crates/dodbogi-core/src/: lib.rs
crates/dodbogi-effects/: Cargo.toml
crates/dodbogi-effects/src/: lib.rs
crates/dodbogi-input/: Cargo.toml
crates/dodbogi-input/src/: lib.rs
crates/dodbogi-parity/: Cargo.toml
crates/dodbogi-parity/src/: lib.rs
crates/dodbogi-render-d3d11/: Cargo.toml
crates/dodbogi-render-d3d11/src/: lib.rs
crates/dodbogi-win32/: Cargo.toml
crates/dodbogi-win32/src/: lib.rs
docs/: windows-window-upscaler-plan.md
tests/fixtures/effects/: stage-g-visual-fixtures.md
tests/manual/: parity-checklist.md
tests/reference/: magpie-behavior.md  magpie-v0.12.1-scenario-evidence.md
